--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -35,12 +35,11 @@
 
 
             <TextView
-                android:id="@+id/textView24"
+                android:id="@+id/name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:fontFamily="@font/poppins_semibold"
-                android:text="Herberth Kagiya"
                 android:textColor="#333333"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -90,12 +89,11 @@
             app:layout_constraintTop_toBottomOf="@+id/textView48" />
 
         <TextView
-            android:id="@+id/name_textView"
+            android:id="@+id/name_details_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:fontFamily="@font/poppins"
-            android:text="Herberth Kagiya"
             android:textColor="#4D4D4D"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -113,7 +111,7 @@
             android:textColor="#333333"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/name_textView" />
+            app:layout_constraintTop_toBottomOf="@+id/name_details_textView" />
 
         <TextView
             android:id="@+id/email_textView"
